[package]
name = "check_ip"
version = "0.1.0"
authors = ["Bykov Igor <igorb.dev@websm.io>"]

[dependencies]
serde_json = "1.0.2"

[dependencies.clap]
version = "2.25.0"
features = ["yaml"]

[dependencies.ipnetwork]
git = "https://github.com/achanda/ipnetwork"
rev = "1abf10d"
features = ["ipv6-iterator", "ipv6-methods"]
